--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "dmf-ui",
   "version": "1.0.0",
   "scripts": {
-    "build": "webpack --mode production",
+    "build:git": "webpack --mode production --env env=git",
+    "build:prod": "webpack --mode production --env env=prod",
     "build:dev": "webpack --mode development",
     "build:start": "http-server ./dist -p 2000",
-    "start": "webpack serve --open --mode development",
+    "start": "webpack serve --open --mode development --env env=local",
     "start:live": "webpack serve --open --mode development --live-reload --hot",
     "make-types": "make-federated-types --outputDir ./dist/@types && cp ./dist/@types/ui.d.ts ../@remote-types",
-    "deploy": "gh-pages -d dist"
+    "deploy:git": "gh-pages -d dist"
   },
   "license": "MIT",
   "author": {
-    "name": "Jack Herrington",
-    "email": "jherr@pobox.com"
+    "name": "NGHIA Nguyen Duc Dai",
+    "email": "nghiandd.84@gmail.com"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
@@ -34,6 +35,7 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-twin": "^1.0.2",
     "css-loader": "^6.3.0",
+    "dotenv-webpack": "^7.0.3",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "material-ripple-effects": "^2.0.1",
