--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
     [
       "@emotion/babel-preset-css-prop",
       {
-        "labelFormat": "mf-ui-[local]",
+        "labelFormat": "ui-[local]",
         "throwIfNamespace": true
       }
     ],
